<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Area51</string>
    <string name="create_an_account">Create an account.</string>
    <string name="loading">Loading...</string>
    <string name="or">Or</string>
    <string name="loading_account_information">Loading account information...</string>
    <string name="login_with_email">Login with email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="account_login">Account login</string>
    <string name="area51">Area51</string>
    <string name="email">Email</string>
    <string name="use_your_credentials_to_login_to_your_account">Use your credentials to log in to your account.</string>
    <string name="login_with_email_title">Login with email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register_with_email">Register with email</string>
    <string name="create_your_area51_account">Create your Area51 account.</string>
    <string name="create_my_account">Create my account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="benjamin">Benjamin</string>
    <string name="dashboard">Dashboard</string>
    <string name="active">Active Areas</string>
    <string name="total_executions">Total executions</string>
    <string name="nothing_to_show">Nothing to show...</string>
    <string name="all_our_functional_areas">Choose an action from the provided list</string>
    <string name="areas_catalog">Actions catalog</string>
    <string name="all_our_functional_areas2">Choose an reaction from the provided list</string>
    <string name="areas_catalog2">Reactions catalog</string>
    <string name="action_reaction_saved">Action and reaction saved successfully</string>
    <string name="error_saving_action_reaction">Error while saving action and reaction: </string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_success">Registration successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="update_success">Update successful</string>
    <string name="update_failed">Update failed</string>
    <string name="delete_success">Successfully deleted</string>
    <string name="delete_failed">Deletion failed</string>
    <string name="password_length_error">Password must be between 5 and 25 characters.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="required_field_empty">Required fields are missing in the request body.</string>
    <string name="invalid_email_or_password">Invalid email or password.</string>
    <string name="internal_server_error">Internal server error.</string>
    <string name="jwt_problem">JWT problem.</string>
    <string name="all_our_functionnal_connections">All our functional connections.</string>
    <string name="add_a_connection">Add a connection</string>
    <string name="add_an_area">Add an action-reaction</string>
    <string name="your_connections">Your connections</string>
    <string name="your_area_s">Your actions and reactions</string>
    <string name="invalid_url">Invalid URL.</string>
    <string name="_0">0</string>
    <string name="server_unreachable">Server is unreachable, please contact an administrator.</string>
    <string name="label_aa_123">Label Aa 123</string>
    <string name="validate">Validate</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="user_profile">User profile</string>
    <string name="informations_updated">Information updated.</string>
    <string name="success_logout">Successfully logged out</string>
    <string name="invalid_token">You are not logged in. Please log in again.</string>
    <string name="get_user_info_failed">Unable to retrieve your profile information.</string>
    <string name="update_user_info_failed">Unable to update your profile information.</string>
    <string name="general_infos">General information</string>
    <string name="state">State:</string>
    <string name="logout">Logout from service</string>
    <string name="paired_on">Paired on:</string>
    <string name="connected">Connected</string>
    <string name="spotify_description">Listen to your favorite music, discover new artists, and enjoy playlists curated just for you. Connect your Spotify account for a personalized experience.</string>
    <string name="discord_description">Join communities, chat with friends, and engage in voice or video calls. Connect your Discord account to stay in touch with your favorite servers and friends.</string>
    <string name="github_description">Explore repositories, contribute to open-source projects, and manage your code. Connect your GitHub account to access your repositories and stay updated with your projects.</string>
    <string name="youtube_description">Watch videos, discover new content, and subscribe to your favorite channels. Connect your YouTube account for a personalized video experience.</string>
    <string name="twitch_description">Watch live streams, connect with streamers, and join communities that share your interests. Connect your Twitch account for a personalized streaming experience.</string>
    <string name="unauthorized_logout">Unauthorized logout. Please check your credentials.</string>
    <string name="logout_service_unreachable">Logout service is unreachable. Please try again later.</string>
    <string name="logged_out">Successfully logged out from the service.</string>
    <string name="unknown_service">Unknown service.</string>
    <string name="logout_failed">Logout failed. Please try again.</string>
    <string name="you_can_change_the_api_base_url">You can change the API base URL.</string>
    <string name="api_base_url">API Base URL</string>
    <string name="update">Update</string>
    <string name="base_url_changing">Changing base API URL...</string>
    <string name="base_url_changed">Base API URL changed ! Restarting the application...</string>
    <string name="reset">Reset</string>
</resources>