<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/modal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/modal_overlay" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/gotham_rounded_bold"
            android:text="@string/label_aa_123"
            android:textColor="@color/light_primary"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:gravity="start"
            android:text="@string/label_aa_123"
            android:textColor="@color/light_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/gotham_rounded_bold"
            android:gravity="start"
            android:text="@string/general_infos"
            android:textColor="@color/light_primary"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:gravity="start"
            android:text="@string/label_aa_123"
            android:textColor="@color/light_primary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/subtitle5"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/subtitle5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:gravity="start"
            android:text="@string/paired_on"
            android:textColor="@color/accent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/subtitle2"
            app:layout_constraintTop_toBottomOf="@+id/subtitle2"
            app:srcCompat="@drawable/ic_clock"
            app:tint="@color/accent" />

        <TextView
            android:id="@+id/subtitle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:gravity="start"
            android:text="@string/state"
            android:textColor="@color/accent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/health"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:gravity="start"
            android:text="@string/label_aa_123"
            android:textColor="@color/light_primary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/subtitle4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/subtitle2"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:srcCompat="@drawable/ic_heart"
            app:tint="@color/accent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/delete"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gotham_rounded_medium"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/dark_primary"
                android:textSize="15sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/deleteLoading"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                app:lottie_autoPlay="true"
                app:lottie_clipToCompositionBounds="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_dark" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>