<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_primary"
    tools:context=".Activities.MainActivity" >

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePictureButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/light_primary"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilePictureImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/priego_light"
        android:text="@string/welcome_back"
        android:textColor="@color/light_primary"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/profilePictureButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/priego_medium"
        android:text="@string/benjamin"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/welcomeBack"
        app:layout_constraintStart_toStartOf="@+id/welcomeBack"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBack" />

    <TextView
        android:id="@+id/dashboardLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/priego_regular"
        android:text="@string/dashboard"
        android:textColor="@color/light_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/priego_regular"
        android:text="Your Area's"
        android:textColor="@color/light_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardCardActive" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboardCardActive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/dark_secondary"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@+id/dashboardCardExecutions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardLabel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dashboardActiveValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/priego_regular"
                android:text="5"
                android:textColor="@color/accent"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dashboardActiveTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/priego_light"
                android:text="@string/active"
                android:textColor="@color/light_primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dashboardActiveValue"
                app:layout_constraintTop_toBottomOf="@+id/dashboardActiveValue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboardCardExecutions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/dark_secondary"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dashboardCardActive"
        app:layout_constraintTop_toTopOf="@+id/dashboardCardActive">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dashboardExecutionsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/priego_regular"
                android:text="399"
                android:textColor="@color/accent"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dashboardExecutionsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/priego_light"
                android:text="@string/total_executions"
                android:textColor="@color/light_primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dashboardExecutionsValue"
                app:layout_constraintTop_toBottomOf="@+id/dashboardExecutionsValue" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/noAreasButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/accent"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/priego_regular"
            android:gravity="center"
            android:text="Add an Area"
            android:textColor="@color/dark_primary"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>